# compiler

./: .gitignore  Cargo.toml  README.md  temp.rs  test.c  test.ll
src/: ast.rs  check.rs  float.rs  llvm_struct.rs  main.rs  parser.lalrpop  settings.rs  symbol.rs  sysy.lalrpop
src/llvm_gen/: arith.rs  arithmetic.rs  arithmetic_gen.rs  array_declaration.rs  bool.rs  build.rs  decl.rs  declaration.rs  define.rs  dump.rs  generate.rs  initval.rs  instruction_gen.rs  llvm_impl.rs  logic_gen.rs  mod.rs  program_gen.rs  scopes.rs  symbol.rs  sysy_gen.rs  type_utils.rs  write_text.rs  writetext.rs
src/llvm_opt/: dead_code_eliminate.rs  deadcode.rs  eliminate.rs  flow.rs  flow_graph.rs  mod.rs  reload.rs  unreachable_eliminate.rs
src/riscv_gen/: asm_select.rs  asmfunc_stack.rs  build.rs  fetch.rs  globalvar.rs  handle_call.rs  linear.rs  linearscan.rs  live_interval.rs  liveness.rs  mod.rs  push_arguments.rs  push_asmfunc.rs  push_datasection.rs  push_localvars.rs  reg.rs  register_alloc.rs  register_resource.rs  register_type.rs  restore_registers.rs  rewrite.rs  save_registers.rs  select.rs  select_utils.rs  stack.rs  stack_slot.rs  write_text.rs  writetext.rs
src/riscv_opt/: mod.rs  peephole.rs  remove_ld.rs  remove_mv.rs
src/structures/: llvm_struct.rs  mod.rs  rewrite_fundef.rs  riscv_regs.rs  riscv_struct.rs  scopes.rs  symbol.rs  writetext_trait.rs
test_new/: test.sh
tests/: 69.s  cmp.py  download.sh  draw_interval.py  parse_time.py  test-base.sh  test-koopa-llvm.sh  test-koopa-riscv.sh  test-llvm.sh  test-riscv.sh  test.s  test.sh  test.sy
(+8 files in other folders)
