[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
lazy_static = "1.4.0"
num-traits = "0.2"

[build-dependencies]
lalrpop = "0.20.0"
